terraform_deployment/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name:  frontend-ingress-ui
  labels:
    app:  frontend-ingress-ui
    type : frontend
spec :
    defaultBackend:
      service:
        name: voting-service
        port:
          number: 80
